BPER/DEVF/force-app/main/default/objects/Endpoint__c/Endpoint__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>List of Endpoints</description>
    <label>Endpoint List</label>
</CustomObject>