BPER/DEVF/force-app/main/default/objects/Endpoint__c/fields/BodyParams__c.field-meta.xml
<CustomField>
    <fullName>BodyParams__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Body Params</label>
    <length>255</length>
    <type>Text</type>
</CustomField>