BPER/DEVF/force-app/main/default/objects/Endpoint__c/fields/EndpointParams__c.field-meta.xml
<CustomField>
    <fullName>EndpointParams__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Endpoint Params</label>
    <length>255</length>
    <type>Text</type>
</CustomField>