BPER/DEVF/force-app/main/default/objects/Endpoint__c/fields/InList__c.field-meta.xml
<CustomField>
    <fullName>InList__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In List</label>
    <type>Checkbox</type>
</CustomField>